--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   font_awesome_flutter: ^10.7.0
   carousel_slider: ^4.0.0
+  dots_indicator: ^3.0.0
   cupertino_icons: ^1.0.6
 
 dev_dependencies:
