--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   carousel_slider: ^4.0.0
   dots_indicator: ^3.0.0
+  intl: ^0.17.0
   cupertino_icons: ^1.0.6
 
 dev_dependencies:
@@ -63,7 +64,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-      - assets/images/
+  - assets/images/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
@@ -78,6 +79,16 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  fonts:
+  - family: Aftika
+    fonts:
+    - asset: assets/fonts/Aftika/Aftika-bold.otf
+    - asset: assets/fonts/Aftika/Aftika-regular.otf
+    - asset: assets/fonts/Aftika/Aftika-light.otf
+    - asset: assets/fonts/Aftika/Aftika-semibold.otf
+    - asset: assets/fonts/Aftika/Aftika-extrabold.otf
+    - asset: assets/fonts/Aftika/Aftika-extralight.otf
+
   # fonts:
   #   - family: Schyler
   #     fonts:
