--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: juan_valdez
-description: "A new Flutter project."
+description: "Una replica de la pagina oficial de Juan Valdez"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -43,6 +43,12 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: "^0.9.2"
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icons/logo.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -82,12 +88,31 @@ flutter:
   fonts:
   - family: Aftika
     fonts:
-    - asset: assets/fonts/Aftika/Aftika-bold.otf
-    - asset: assets/fonts/Aftika/Aftika-regular.otf
-    - asset: assets/fonts/Aftika/Aftika-light.otf
-    - asset: assets/fonts/Aftika/Aftika-semibold.otf
-    - asset: assets/fonts/Aftika/Aftika-extrabold.otf
-    - asset: assets/fonts/Aftika/Aftika-extralight.otf
+    - asset: assets/fonts/Aftika/Aftika-Bold.ttf
+    - asset: assets/fonts/Aftika/Aftika-Regular.ttf
+    - asset: assets/fonts/Aftika/Aftika-Light.ttf
+    - asset: assets/fonts/Aftika/Aftika-SemiBold.ttf
+    - asset: assets/fonts/Aftika/Aftika-ExtraBold.ttf
+    - asset: assets/fonts/Aftika/Aftika-ExtraLight.ttf
+
+  - family: Sanomat
+    fonts:
+    - asset: assets/fonts/Sanomat/Sanomat-SansBold.otf
+    - asset: assets/fonts/Sanomat/Sanomat-SansRegular.otf
+    - asset: assets/fonts/Sanomat/Sanomat-SansLight.otf
+    - asset: assets/fonts/Sanomat/Sanomat-SansMedium.otf
+    - asset: assets/fonts/Sanomat/Sanomat-SansXBold.otf
+    - asset: assets/fonts/Sanomat/Sanomat-SansXLight.otf
+    - asset: assets/fonts/Sanomat/Sanomat-SansThin.otf
+    - asset: assets/fonts/Sanomat/Sanomat-SansBlack.otf
+
+  - family: merriweather
+    fonts:
+    - asset: assets/fonts/merriweather-bold.ttf
+
+  - family: MarrSansCondensed-Semibold
+    fonts:
+    - asset: assets/fonts/MarrSansCondensed-SemiboldItalic.otf
 
   # fonts:
   #   - family: Schyler
